fixed spacing issue on scrollbar in reportviewer component

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -77,7 +77,7 @@ body {
 
 .main-report-panel {
 	width: 100%;
-	height: 100vh;
+	/* height: 100vh; */
 	min-height: 0;
 	display: flex;
 	flex-direction: column;
